--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://MBersPro.github.io/goit-js-hw-13-image-finder",
+  "homepage": "https://MBersPro.github.io/goit-13",
   "scripts": {
     "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /goit-js-hw-13-image-finder/"
+    "build": "parcel build src/*.html --public-url /goit-13/"
   },
   "repository": {
     "type": "git",
